--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,40 @@
-.App {
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+.box-container {
   text-align: center;
+  color: white;
+  padding: 8px 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.box {
+  width: 200px;
+  height: 200px;
+  margin-top: 20px;
+  background-color: aquamarine;
+  text-align: center;
+  line-height: 200px;
+  color: white;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.boxflex {
+  width: 200px;
+  height: 200px;
+  background-color: aquamarine;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.boxItem {
+  width: 0.5em;
+  height: 0.5em;
+  padding: 1rem;
+  background-color: white;
+  list-style: none;
+  margin: 4px;
 }
